NetBSD Problem Report #54999

From www@netbsd.org  Fri Feb 21 22:57:38 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 42B621A9213
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 21 Feb 2020 22:57:38 +0000 (UTC)
Message-Id: <20200221225737.4E3481A9217@mollari.NetBSD.org>
Date: Fri, 21 Feb 2020 22:57:37 +0000 (UTC)
From: coypu@sdf.org
Reply-To: coypu@sdf.org
To: gnats-bugs@NetBSD.org
Subject: kernel panic in drm gem cma code
X-Send-Pr-Version: www-1.0

>Number:         54999
>Category:       kern
>Synopsis:       kernel panic in drm gem cma code
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 21 23:00:00 +0000 2020
>Closed-Date:    Sat Apr 04 20:12:55 +0000 2020
>Last-Modified:  Sat Apr 04 20:12:55 +0000 2020
>Originator:     coypu
>Release:        NetBSD 9.99.47
>Organization:
>Environment:
NetBSD arm64 9.99.47 NetBSD 9.99.47 (GENERIC64) #0: Fri Feb 21 17:12:50 UTC 2020  fly@ovh:/home/fedora/arm64/sys/arch/evbarm/compile/GENERIC64 evbarm

>Description:
Switch between vt and xorg somewhat quickly. Obtain panic.

panic: Trap: Data Abort (EL1): Translation Fault L1 with read access for 0000000000000058: pc ffffffc0000826f4: opcode b9405820: ldr w0, [x1,#88]

cpu1: Begin traceback...
trace fp ffffffc0556cf680
fp ffffffc0556cf6a0 vpanic() at ffffffc0004aece8 netbsd:vpanic+0x160
fp ffffffc0556cf710 panic() at ffffffc0004aeddc netbsd:panic+0x44
fp ffffffc0556cf7a0 data_abort_handler() at ffffffc0000889dc netbsd:data_abort_handler+0x49c
tf ffffffc0556cf820 el1_trap() at ffffffc00008538c netbsd:el1_trap
---- trapframe 0xffffffc0556cf820 (304 bytes) ----
    pc=ffffffc0000826f4,   spsr=0000000060000005
   esr=0000000096000005,    far=0000000000000058
    x0=ffff0000bf965208,     x1=0000000000000000
    x2=ffffffc054a00000,     x3=00000000007e9000
    x4=0000000000000000,     x5=0000000000000000
    x6=ffffffc0000826c8,     x7=ffff0000bf659c80
    x8=0000000000000004,     x9=0000000000000001
   x10=0000000000000000,    x11=000000000000003f
   x12=fffffc0001f54c35,    x13=fffffc0001f54c35
   x14=00000002002e7648,    x15=ffff00007d530d50
   x16=0000f1061e4ee300,    x17=0000f1061dd55558
   x18=0000000000000006,    x19=0000000000000000
   x20=00000000007e9000,    x21=0000000000000000
   x22=ffffffc054a00000,    x23=ffff0000bf965208
   x24=0000000000000000,    x25=ffffffc0556cfcb0
   x26=ffffffc0556cfcb0,    x27=ffffffc0556cfda0
   x28=0000000080000000, fp=x29=ffffffc0556cfb50
lr=x30=ffffffc0003161b8,     sp=ffffffc0556cfb50
------------------------------------------------
fp ffffffc0556cfb50 _bus_dmamap_load() at ffffffc0000826f4 netbsd:_bus_dmamap_load+0x2c
fp ffffffc0556cfba0 drm_gem_cma_create_internal() at ffffffc0003161b4 netbsd:drm_gem_cma_create_internal+0xd4
fp ffffffc0556cfbf0 drm_gem_cma_dumb_create() at ffffffc000316634 netbsd:drm_gem_cma_dumb_create+0x4c
fp ffffffc0556cfc50 drm_ioctl() at ffffffc00033c5e0 netbsd:drm_ioctl+0x130
fp ffffffc0556cfd30 drm_ioctl_shim() at ffffffc000315860 netbsd:drm_ioctl_shim+0x38
fp ffffffc0556cfd40 sys_ioctl() at ffffffc0004bbfe4 netbsd:sys_ioctl+0x404
fp ffffffc0556cfe20 syscall() at ffffffc000086d64 netbsd:syscall+0x18c
tf ffffffc0556cfed0 el0_trap() at ffffffc0000853f8 netbsd:el0_trap
---- trapframe 0xffffffc0556cfed0 (304 bytes) ----
    pc=0000f1061dd5555c,   spsr=0000000060000000
   esr=0000000056000036,    far=0000f1061dba8200
    x0=000000000000000a,     x1=00000000c02064b2
    x2=0000ffffffe473c0,     x3=0000f1061e70b218
    x4=0000ffffffe473cc,     x5=000000000021e3b0
    x6=0000000000000000,     x7=0000f1061e62a0c0
    x8=0000f1061e629ca8,     x9=0000000000000006
   x10=0000000000000040,    x11=0000000000000001
   x12=00000002002e74e0,    x13=00000002002e76d0
   x14=00000002002e7648,    x15=0000f1061d72b6e0
   x16=0000f1061e4ee300,    x17=0000f1061dd55558
   x18=0000000000000006,    x19=0000f1061d72b6c0
   x20=0000ffffffe473c0,    x21=00000000c02064b2
   x22=000000000000000a,    x23=000000000000000a
   x24=0000f1061d8f97a0,    x25=00000002003a8090
   x26=00000002003b0db0,    x27=00000002003a7000
   x28=0000000000000000, fp=x29=0000ffffffe47350
lr=x30=0000f1061e4d7480,     sp=0000ffffffe47350
------------------------------------------------
cpu1: End traceback...

dump to dev 92,17 not possible
rebooting...

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->needs-pullups
State-Changed-By: maya@NetBSD.org
State-Changed-When: Fri, 21 Feb 2020 23:28:55 +0000
State-Changed-Why:
should be pulled up everywhere, probably.


From: "Maya Rashish" <maya@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54999 CVS commit: src/sys/arch/arm/arm32
Date: Fri, 21 Feb 2020 23:27:06 +0000

 Module Name:	src
 Committed By:	maya
 Date:		Fri Feb 21 23:27:06 UTC 2020

 Modified Files:
 	src/sys/arch/arm/arm32: bus_dma.c

 Log Message:
 Make sure to convey a failure to the calling function

 Likely fix for PR kern/54999, but that was a one-off panic.


 To generate a diff of this commit:
 cvs rdiff -u -r1.118 -r1.119 src/sys/arch/arm/arm32/bus_dma.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: coypu@sdf.org
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/54999: kernel panic in drm gem cma code
Date: Fri, 21 Feb 2020 23:15:58 +0000

 This is a bug in aarch64 _bus_dmamap_create.

   if (... = NULL)
      error = ESOMETHING;
      goto out;

 out:
   ...
   return 0;

From: Nick Hudson <nick.hudson@gmx.co.uk>
To: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org,
 netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, maya@NetBSD.org,
 coypu@sdf.org
Cc: 
Subject: Re: kern/54999 (kernel panic in drm gem cma code)
Date: Sat, 22 Feb 2020 09:30:36 +0000

 [pullup-9 #721] arm{,64} bus_dma.c error reporting fix
 [pullup-8 #1510] arm{,64} bus_dma.c error reporting fix

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54999 CVS commit: [netbsd-9] src/sys/arch/arm/arm32
Date: Tue, 25 Feb 2020 19:16:24 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Feb 25 19:16:23 UTC 2020

 Modified Files:
 	src/sys/arch/arm/arm32 [netbsd-9]: bus_dma.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #721):

 	sys/arch/arm/arm32/bus_dma.c: revision 1.119
 	sys/arch/arm/arm32/bus_dma.c: revision 1.120

 Make sure to convey a failure to the calling function
 Likely fix for PR kern/54999, but that was a one-off panic.
  -
 Fix previous for non-_ARM32_NEED_BUS_DMA_BOUNCE builds


 To generate a diff of this commit:
 cvs rdiff -u -r1.115.2.2 -r1.115.2.3 src/sys/arch/arm/arm32/bus_dma.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54999 CVS commit: [netbsd-8] src/sys/arch/arm/arm32
Date: Tue, 25 Feb 2020 19:20:43 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Feb 25 19:20:43 UTC 2020

 Modified Files:
 	src/sys/arch/arm/arm32 [netbsd-8]: bus_dma.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #1510):

 	sys/arch/arm/arm32/bus_dma.c: revision 1.119
 	sys/arch/arm/arm32/bus_dma.c: revision 1.120

 Make sure to convey a failure to the calling function
 Likely fix for PR kern/54999, but that was a one-off panic.
  -
 Fix previous for non-_ARM32_NEED_BUS_DMA_BOUNCE builds


 To generate a diff of this commit:
 cvs rdiff -u -r1.98 -r1.98.8.1 src/sys/arch/arm/arm32/bus_dma.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: needs-pullups->closed
State-Changed-By: maya@NetBSD.org
State-Changed-When: Sat, 04 Apr 2020 20:12:55 +0000
State-Changed-Why:
Pulled up pretty far back, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.