Make sure to convey a failure to the calling function

Likely fix for PR kern/54999, but that was a one-off panic.